--- a/_includes/head.html
+++ b/_includes/head.html
@@ -151,7 +151,7 @@
 
  <!-- (you can remove the below scripts but do buy me a coffee to show some support :) -->
 <!-- Maker widget  -->
-  <script>
+ <!-- <script>
     (function(d, h, m) {
       var js,
         fjs = d.getElementsByTagName(h)[0];
@@ -169,7 +169,8 @@
       js.src = "https://makerwidget.com/js/embed.js";
       fjs.parentNode.insertBefore(js, fjs);
     })(document, "script", "dhm");
-  </script>
+  </script> 
+-->
   <!-- buy me a coffeee -->
   <script
     data-name="BMC-Widget"
