--- a/_includes/blog_sidebar.html
+++ b/_includes/blog_sidebar.html
@@ -1,15 +1,15 @@
 
 <div class="col-lg-3">
     <div class="card">
-        <div class="card-header">Categories </div>
+        <div class="card-header">카테고리</div>
         <div class="card-body text-dark">
             {%- include blog_categories.html -%}
         </div>
     </div>
-    <div class="card">
+  <!--  <div class="card">
         <div class="card-header">Authors </div>
             <div class="card-body text-dark">
                 {%- include blog_authors.html -%}
             </div>
-      </div>
+      </div> -->
 </div>
