--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,8 @@
 <footer>
-    <p> Powered by<a href="https://github.com/sujaykundu777/devlopr-jekyll"> devlopr jekyll</a>.Hosted at <a href="https://pages.github.com">Github</a>. Subscribe via
+  <!--  <p> Powered by<a href="https://github.com/sujaykundu777/devlopr-jekyll"> devlopr jekyll</a>.Hosted at <a href="https://pages.github.com">Github</a>. Subscribe via
         <a href="{{ " /feed.xml " | prepend: site.baseurl }}">RSS</a>
-    </p>
+    </p> -->
+    <P> 
+        초보개발자 sezero 블로그 입니다.
+    </P>
 </footer>
