--- a/_includes/share_page.html
+++ b/_includes/share_page.html
@@ -17,7 +17,7 @@
   charset="utf-8"
 ></script>
 
-<div class="share-page">
+<!--<div class="share-page">
   <p class="share-text">Share this on &rarr;</p>
   <a
     href="https://twitter.com/share?ref_src=twsrc%5Etfw"
@@ -33,4 +33,4 @@
     data-size="large"
     data-layout="button"
   >Share</a>
-</div>
+</div> -->
