--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,9 @@ layout: default
     });
   });
 </script>
-    <div class="jumbotron" style="text-align: center;">
+    <div class="jumbotron" style="text-align: center; background-image:url(/assets/img/guel.jpg); background-size: cover;">>
       <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/guel.jpg" />
-      <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
+      <p class="jumbotron-heading">{{site.author}} !</p>
       <p class="lead" id="typewriteText"></p>
          {%- include github_star_button.html -%}
          {%- include github_fork_button.html -%}
