--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   });
 </script>
     <div class="jumbotron" style="text-align: center; background-image:url(/assets/img/guel.jpg); background-size: cover;">>
-      <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/guel.jpg" />
+      <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/모코코.jpg" />
       <p class="jumbotron-heading">{{site.author}} !</p>
       <p class="lead" id="typewriteText"></p>
          {%- include github_star_button.html -%}
