--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,6 @@
         <a href="{{ " /feed.xml " | prepend: site.baseurl }}">RSS</a>
     </p> -->
     <P> 
-        초보개발자 sezero 블로그 입니다.
+       냐옹이는 고양고양 울지
     </P>
 </footer>
