--- a/_includes/author.html
+++ b/_includes/author.html
@@ -6,7 +6,7 @@
         <div class="row">
                 <div class="col-md-4">
                         {% if author.avatar_url %}
-                        <img class="author-profile-img" src="/assets/img/authors/{{author.avatar_url}}" alt="{{author.name}}" />
+                        <img class="author-profile-img" src="/assets/img/모코코.png" alt="{{author.name}}" />
                       {% else %}
                         <img class="author-profile-img" src="{{site.url}}/assets/img/authors/{{author.avatar}}" alt="{{author.name}}" />
                       {% endif %}
