--- a/_includes/head.html
+++ b/_includes/head.html
@@ -102,7 +102,7 @@
   <!-- Favicon -->
   <link
     rel="icon"
-    href="{{site.url}}{{site.baseurl}}/assets/img/authors/모코코.jpg"
+    href="{{site.url}}{{site.baseurl}}/assets/img/모코코.ico"
     type="image/gif"
     sizes="16x16"
   />
