--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
 </script>
     <div class="jumbotron" style="text-align: center; background-image:url(/assets/img/guel.jpg); background-size: cover;">>
       <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/모코코.png" />
-      <p class="jumbotron-heading">저장고</p>
+      <p class="jumbotron-heading"></p>
       <p class="lead" id="typewriteText"></p>
          {%- include github_star_button.html -%}
          {%- include github_fork_button.html -%}
